--- a/Planet_Tanks/build.gradle
+++ b/Planet_Tanks/build.gradle
@@ -50,12 +50,15 @@ project(":android") {
 
     dependencies {
         compile project(":core")
+        compile 'com.android.support:appcompat-v7:25.3.1'
+        compile 'com.google.android.gms:play-services-ads:10.2.4'
         compile "com.badlogicgames.gdx:gdx-backend-android:$gdxVersion"
         natives "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-armeabi"
         natives "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-armeabi-v7a"
         natives "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-arm64-v8a"
         natives "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-x86"
         natives "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-x86_64"
+
     }
 }
 
